I think I finished it

--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
 <!-- Exercise 7 -->
   <p>7) Create your own event listener</p>
 
+  <button id='randomness'>Random</button>
+
+  <p id="displayRandomnes"></p>
+
 
 </body>
 </html>
